# ESMA-8635

./: S3_regresion_lineal_simple.R  main.py  pyproject.toml  requirements.txt
code/R/: S4-regresion_lineal_multiple.R
notebooks/: pymc.ipynb  scratch.ipynb  stan_rest.ipynb  week4.ipynb  week5.ipynb
src/esma_8635/: __init__.py
stan/: reg.stan
