[project]
name = "esma-8635"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" }]
requires-python = ">=3.10"
dependencies = [
    "arviz[all]>=0.23.1",
    "bambi>=0.15.0",
    "cmdstanpy>=1.3.0",
    "jupytext>=1.19.1",
    "pymc>=5.25.1",
    "pystan>=3.10.0",
    "statsmodels>=0.14.6",
]

[project.scripts]
esma-8635 = "esma_8635:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "polars>=1.37.1",
    "pre-commit>=4.5.1",
    "scipy>=1.15.3",
]
